# su-firewall

./: .env.example  .gitignore  AI_INSTRUCTIONS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLOUDFLARE_WORKER_DISCOVERY_PLAN.md  Cargo.toml  EXECUTION_SUMMARY.md  HIGH_IMPACT_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSING.md  MISTRAL_LIVE_AUDIT_README.md  PERSISTENT_LEARNING_ARCHITECTURE.md  QUICK_START.md  README.md  SEMANTIC_AUDITOR_README.md  SEMANTIC_UNCERTAINTY_AI_INSTRUCTIONS.md  SEMANTIC_UNCERTAINTY_MASTER_GUIDE.md  SYSTEM_TECHNICAL_BREAKDOWN.md  TIER3_INTEGRATION_GUIDE.md  WHAT_IS_LEFT.md  accuracy_benchmark_suite.py  api_key_guide.md  api_key_manager.py  api_key_validation.js  comprehensive_evaluation.py  comprehensive_evaluation_results.csv  comprehensive_metrics_results.json  cross_domain_validation_results.json  cross_domain_validation_suite.py  dataset_loading_summary.json  deploy_api_keys.sh  deploy_cloudflare.sh  deploy_integration.sh  deploy_wasm.sh  enhanced_natural_distribution_test.py  ensemble_method_analyzer.py  ensemble_test_results.json  error_analysis.jsonl  error_analysis_report.md  (+33 more)
archive/: test_wasm_integration.html  test_wasm_simple.html
archive_docs/: 4_METHOD_ENSEMBLE_IMPLEMENTATION.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CODEBASE_OVERVIEW.md  COMPREHENSIVE_EVALUATION_ANALYSIS.md  CUSTOM_DOMAIN_SETUP.md  CUSTOM_DOMAIN_SETUP_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ENHANCED_FEP_INTEGRATION.md  FINAL_RESEARCH_SUMMARY.md  GAS_OPTIMIZATION_SIMULATION_RESULTS.md  HALLUCINATION_DETECTION_BREAKTHROUGH.md  HBAR_GATED_FIREWALL_GUIDE.md  HIGH_PERFORMANCE_ENSEMBLE_FINDINGS.md  HYPER_SCALE_ANALYSIS.md  INFERENCE_AI_SUMMARY.md  INTEGRATION_SUMMARY.md  LIVE_PERFORMANCE_METRICS.md  LIVE_PERFORMANCE_SUMMARY.md  METHOD_DISAGREEMENT_INSIGHTS.md  NEURAL_UNCERTAINTY_PHYSICS.md  OPTIMIZATION_TRAILHEADS.md  PHASE_3_TRAILHEADS.md  PRODUCTION_DEPLOYMENT.md  PURE_MATH_VISION.md  README_DEPLOYMENT.md  README_runtime.md  REALTIME_EVALUATION_SUMMARY.md  REORGANIZATION_SUMMARY.md  SCRIPTS_ORGANIZATION.md  SELF_HOSTING_GUIDE.md  (+5 more)
common/: Cargo.toml
common/src/: error.rs  lib.rs  types.rs
common/src/analysis/: domain_semantic_entropy.rs  mod.rs
common/src/data/: domain_datasets.rs  mod.rs
common/src/ensemble/: mod.rs
common/src/math/: free_energy.rs  information_theory.rs  mod.rs  semantic_entropy.rs
common/src/metrics/: domain_metrics.rs  mod.rs
common/src/optimization/: mod.rs
core-engine/: .env.example  .gitignore  Cargo.toml
core-engine/examples/: tier3_demo.rs
core-engine/src/: api.rs  architecture_detector.rs  batch_processing.rs  cloudflare_worker.rs  ffi.rs  free_energy.rs  information_theory.rs  lib.rs  live_audit_dashboard.rs  live_response_auditor.rs  main.rs  mistral_integration.rs  monitoring.rs  oss_logit_adapter.rs  predictive_uncertainty.rs  rigorous_benchmarking.rs  scalar_firewall.rs  scalar_walk_firewall.rs  secure_api_key_manager.rs  semantic_decision_engine.rs  semantic_metrics.rs  simplified_test.rs  streamlined_engine.rs  unified_calculator.rs  wasm_simple.rs  worker_main.rs
core-engine/src/examples/: llama_integration.rs
core-engine/src/modules/: core_engine.rs  cost_tracker.rs  mod.rs  rewrite_optimizer.rs  semantic_metrics.rs  token_analyzer.rs
core-engine/src/tests/: hash_embedding_discrepancy_tests.rs
core-engine/wasm-simple/: Cargo.toml
core-engine/wasm-simple/src/: lib.rs
preprompt/: Cargo.toml
preprompt/src/: api_security_analyzer.rs  architecture_detector.rs  batch_processing.rs  compression.rs  ffi.rs  free_energy.rs  information_theory.rs  lib.rs  metrics_pipeline.rs  predictive_uncertainty.rs  rigorous_benchmarking.rs  wasm_simple.rs
preprompt/src/analyzer/: mod.rs
preprompt/src/modules/: cost_tracker.rs  prompt_scorer.rs  rewrite_optimizer.rs  semantic_metrics.rs  token_analyzer.rs
real-time-engine/: Cargo.toml  mistral_audit_server.py  mistral_demo_server.py  mistral_live_server.py  mistral_ollama_server.py  mistral_pytorch_server.py  start_mistral_full.sh  start_mistral_live_audit.sh  start_real_logits_system.sh  stop_servers.sh
real-time-engine/requirements/: requirements.txt  requirements_demo.txt  requirements_mistral.txt  requirements_ollama.txt  requirements_simple.txt
real-time-engine/src/: main.rs  models.rs
realtime/: Cargo.toml  README.md
realtime/dashboard/: app.py  models_registry.py
realtime/src/: adaptive_learning.rs  alias_ambiguity_defense.rs  api.rs  audit_interface.rs  audit_system.rs  candle_integration.rs  lib.rs  live_audit_dashboard.rs  live_response_auditor.rs  metrics.rs  mistral_integration.rs  oss_logit_adapter.rs  scalar_firewall.rs
realtime/src/validation/: cross_domain.rs  mod.rs
realtime/tests/: api_snapshots.rs
realtime/tests/snapshots/: api_snapshots__analyze_topk_ok.snap
realtime/web-ui/: Cargo.toml  index.html
realtime/web-ui/src/: lib.rs
semantic-uncertainty-wasm/: BOLD_SCALE_DEPLOYMENT.js  CODEBASE_OVERVIEW.md  Cargo.toml  GO_LIVE_NOW.js  HALLUCINATION_DEMO_CASES.js  HYPER_SCALE_LAUNCH.js  PHASE_2_LAUNCH.js  PHASE_2_READINESS_ASSESSMENT.md  QUICK_START_LIVE.md  README.md  README_DEPLOYMENT.md  alert_system.js  connect_live_system.js  conservative_gas_optimizer.js  demo.html  deploy_conservative_now.js  deploy_phase1_live.js  final_deployment_integration.js  gas_optimization_engine.js  gas_optimization_simulation.js  gas_optimization_testing.js  live_deployment_demo.js  monitoring_dashboard.js  performance_dashboard.html  phase1_demo.js  phase1_validation.js  production_demo.html  production_error_handler.js  production_monitor.js  pure-math-system.js  requirements.txt  run_gas_optimization_tests.js  test_0g_connection.js  test_0g_live.html  wallet_integration_test.js  wallet_test_runner.html  zg_demo.html  zg_production_integration.js  zg_testnet_integration.js
semantic-uncertainty-wasm/.github/workflows/: deploy.yml
semantic-uncertainty-wasm/src/: lib.rs
semantic-uncertainty-wasm/website/: DEPLOYMENT_GUIDE.md  README.md  index.html  netlify.toml  package.json  script.js  styles.css
server/: Cargo.toml
server/src/: main.rs
(+286 files in other folders)
