[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ndarray = { version = "0.15", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0" 