[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ndarray = { version = "0.15", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = { version = "0.8", features = ["std_rng"] } 