[package]
name = "preprompt"
version = "0.1.0"
edition = "2021"

[lib]
name = "preprompt"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ndarray = { version = "0.15", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
base64 = "0.21"
ring = "0.17"
rayon = "1.8"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "time", "sync", "rt", "rt-multi-thread"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = []
wasm = [] 