[package]
name = "real-time-engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Team <team@yourcompany.com>"]
description = "Real-time UQ/FEP WebSocket service using core-engine"
license = "MIT OR Apache-2.0"

[dependencies]
semantic-uncertainty-runtime = { path = "../core-engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = { version = "0.20" }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4" 