[package]
name = "realtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "realtime"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
preprompt = { path = "../preprompt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
log = "0.4"
thiserror = "1.0"
ndarray = { version = "0.15", default-features = false }
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1.0", features = ["macros", "time", "sync", "rt", "rt-multi-thread"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }
lru = "0.12"

[features]
default = []
api = ["axum"]
http-api = []
websocket = []
python = []
huggingface = []
llamacpp = []
pytorch = []

[dev-dependencies]
insta = { version = "1", features = ["redactions", "json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1" 