[package]
name = "semantic-uncertainty-runtime-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Team <team@yourcompany.com>"]
description = "Simplified WASM implementation for semantic uncertainty analysis"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1 