[package]
name = "realtime-web-ui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.5", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Location"] }
futures-util = "0.3" 